# tx-bot

./: .env  Cargo.toml  README.md  task
src/: env_utils.rs  lib.rs  limits.rs  main.rs  tx.rs  tx_genertor.rs  utils.rs
tests/: tests.rs
