[package]
name = "test-bot"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
derive_builder = "0.20.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
serial_test = "3.1.1"


[profile.dev]
debug = true


[profile.release]
debug = false
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true